--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="UTF-8" />
         <title>Hello React!</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
     </head>
     <body>
         <div id="example"></div>
