--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Price Watcher</title>
+        <link rel="shortcut icon" href="https://image.flaticon.com/icons/png/512/159/159604.png" type="image/x-icon">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
     </head>
